# subrip-parser

./: Cargo.toml  README.md  other.srt  sample.srt  srt.pest
src/: main.rs
